ingress-rule-pv-pvc-mongodbsecret/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: three-tier
  annotations:
     kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: backend.singhritesh85.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-folo
                port:
                  number: 3500
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-folo
                port:
                  number: 3000
